# swisstronik-rust-swift-kotlin

./: .gitignore  Cargo.toml  Justfile  LICENSE  Package.resolved  Package.swift  README.md  build.rs
.github/workflows/: ios-test.yml  kotlin.yml  rust.yml  swift.yml
include/: module.modulemap  swisstronik.h
kotlin/: settings.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/swisstronik-kotlin/: build.gradle
kotlin/swisstronik-kotlin/src/androidTest/java/com/swisstronik/kotlin/: AndroidTestUtils.kt  SwisstronikTest.kt
kotlin/swisstronik-kotlin/src/main/: AndroidManifest.xml
kotlin/swisstronik-kotlin/src/main/java/com/swisstronik/kotlin/: SwisstronikKotlin.kt
kotlin/swisstronik-kotlin/src/main/java/ffi/contract/: BytearrayWrongLengthErrorKt.kt  Contract.java  ContractKt.kt  DeoxysIIDecryptFailureResponseKt.kt  DeoxysIIDecryptRequestKt.kt  DeoxysIIDecryptResponseKt.kt  DeoxysIIDecryptSuccessResponseKt.kt  DeoxysIIEncryptFailureResponseKt.kt  DeoxysIIEncryptRequestKt.kt  DeoxysIIEncryptResponseKt.kt  DeoxysIIEncryptSuccessResponseKt.kt  DeserializationErrorKt.kt  FFIRequestKt.kt
kotlin/swisstronik-kotlin/src/test/java/com/swisstronik/kotlin/: ExampleUnitTest.kt
protobuf_contracts/: contract.proto
src/: byte_buffer.rs  ffi_android.rs  ffi_ios.rs  lib.rs
src/protobuf_generated/: contract.rs  mod.rs
swift/: SwisstronikSwift.swift
swift/protobuf_contracts/: contract.pb.swift
swift/tests/: SwisstroniSwiftTests.swift
